# bierman

./: .gitignore  CMakeLists.txt  README.md
apps/: app_dynamic_compare.cpp  app_static_compare.cpp  app_ukf_srukf_bias.cpp
include/bierman/: types.hpp
include/bierman/filters/: kalman_joseph.hpp  potter_sr.hpp  schmidt.hpp  srif.hpp  srukf.hpp  ud_filter.hpp  ukf.hpp
include/bierman/internal/: srukf_detail.hpp
include/bierman/linalg/: chol_update.hpp  qr.hpp  triangular.hpp  ud.hpp
include/bierman/models/: ballistic_room.hpp  range_box_3d.hpp
include/bierman/util/: csv.hpp  rng.hpp  stats.hpp
tests/: bench_filter_update.cpp  test_chol_update.cpp  test_consistency_stats.cpp  test_filter_equivalence_linear.cpp  test_iterated_updates.cpp  test_kalman_joseph.cpp  test_qr.cpp  test_regression_metrics.cpp  test_srukf_stress.cpp  test_ud.cpp  test_ukf_srukf.cpp
tests/golden/: metrics_baseline.txt
